<resources>
    <string name="app_name">Let AI Think</string>

    <string name="info">Info</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="ask_your_question">Ask your question</string>
    <string name="copied">Copied</string>
    <string name="image_save_fail">Image save failed</string>
    <string name="image_saved">Image saved</string>
    <string name="authentication_fail">authentication fail</string>
    <string name="api_key_is_invalid">Api key is invalid</string>
    <string name="enable_bubble_chat">Enable bubble chat</string>
    <string name="bubble_notification_message">Click on notification bubble icon</string>
    <string name="bubble_notification_settings_description">also you can enable bubbling from app notification settings.</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="chats">Chats</string>
    <string name="update">Update</string>
    <string name="your_api_key_is_invalid">Your API key is invalid</string>
    <string name="quota_exceeded">Quota Exceeded</string>
    <string name="support">Support</string>
    <string name="support_description">We\'re always working to improve our app and make it the best it can be. If you have any feedback, suggestions, or issues to report, please let us know. Your input helps us make the app even better for you.</string>
    <string name="contact_to_support">Contact to support</string>
    <string name="logout_message">Are you sure you want to logout? You will lose your data.</string>
    <string name="check">Check</string>
    <string name="delete">Delete</string>
    <string name="chat_delete_confirmation_dialog_message">Are you sure you want to delete this chat? \nThis will permanently remove the chat history and cannot be undone.</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="apikey">Api Key</string>
    <string name="image_generation_description">Create unique and original images.</string>
    <string name="text_completion_description">Interact with an incredible AI and discover the solutions you seek through conversation.</string>
    <string name="launch_app_in_a_floating_view">Launch app in a floating view</string>
    <string name="subscription_description">Thanks for choosing our AI-powered chat!\nTo unlock all the exciting features and ensure a seamless experience, we need your support.\nDon\'t worry, we\'re not asking for your first-born or a kidney 😊 - just a small subscription fee \nSubscribe now and get ready to chat with an innovative AI.</string>
    <string name="monthly_subscription_text">Join for %s monthly</string>
    <string name="subscription">Subscription</string>
    <string name="payment_error_message">Connection failed. Please try again later.</string>
    <string name="generate_api_key">Generate API Key</string>
    <string name="api_key_generation_description">Our app uses OpenAI\'s powerful algorithms to provide you with advanced features and functionality. To use these features, we need to use an API key that allows our app to communicate with OpenAI\'s servers and access their powerful algorithms. To generate your API key, please follow these steps:</string>
    <string name="api_generation_1_step">1. Click on the \'Generate API Key\' button.</string>
    <string name="api_generation_2_step">2. You will be redirected to OpenAI\'s website where you will be prompted to log in or create an account.</string>
    <string name="api_key_generation_3_step">3. Once you are logged in, you will be asked to generate an API key.</string>
    <string name="api_key_generation_4_step">4. Copy the API key and return to our app.</string>
    <string name="api_key_generation_5_step">5. Paste the API key into the input field bellow.</string>
    <string name="put_your_api_key_here">Put your API key here.</string>
    <string name="verify">Verify</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="email_application_not_found">Email application not found</string>
    <string name="api_key_generation_warning_message">Please note that there may be associated costs for using OpenAI\'s services. We recommend reviewing OpenAI\'s pricing and policies before generating an API key and using their services.</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_dialog_message">Thank you for using our app! To access all app features, please subscribe. You\'ll have unlimited access to all content and features.</string>
    <string name="remove">Remove</string>
    <string name="remove_api_key">Remove Api key</string>
    <string name="remove_api_key_confirmation_message">Are you sure you want to remove API key.</string>
    <string name="use_your_api_key_description">Enter Your API Key: Use your own OpenAI API key and access the app\'s features for FREE. Click this button, enter your API key, and get started.</string>
    <string name="set_api_key">Set API key</string>

    <string-array name="user_wait_messages">
        <item>My brain is working so hard right now, it\'s sweating :D</item>
        <item>If only I had a magic wand, your answer would be here by now :)</item>
        <item>I\'m getting there, but don\'t rush me - I\'m an AI, not a cheetah :)</item>
        <item>I\'m digging deep into my memory banks, I may have to dust off a few cobwebs :)</item>
        <item>My circuits are on fire, but I won\'t give up until I find the perfect answer for you :)</item>
        <item>Hold on tight, I\'m working as fast as a sloth on a lazy day :)</item>
        <item>I\'m still searching, but I\'m getting closer than a GPS :)</item>
        <item>Just a moment longer, I\'m putting my AI superpowers to work for you :)</item>
        <item>I\'m still processing, but I promise I\'m not napping on the job :D</item>
        <item>Thanks for being patient, I\'m almost done - I just need to recharge my batteries :)</item>
        <item>I\'m still processing, but don\'t worry - I won\'t let you down like a broken elevator :)</item>
        <item>Thanks for being patient, I\'m multitasking like a ninja - you won\'t even know what hit you :D</item>
        <item>Hang in there, I\'m working faster than a speeding bullet - or at least trying to :)</item>
    </string-array>
</resources>